tests/failing/bad-return-value.c
int f1() {
    return true;
}